Mon Apr  7 11:56:59 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_root/root.cpp (visit_root):

          Added a check at this higher level before creating and 
          launching a visitor for OBV_* module code. This visitor
          should not be created unless we are generating code in
          stub files. Formerly the check of context state that catches
          this was done at a lower level, in visit_* methods of
          subclassed visitors. One case for eventtypes was missed,
          which was the cause of the invesitgation.

        * TAO_IDL/be/be_visitor_valuetype/obv_module.cpp (visit_eventtype):

          Removed error message for case which is now caught at a 
          higher level as described above, and made other cosmetic
          changes to the source code. Thanks to Nanbor Wang
          <nanbor@cse.wustl.edu> for reporting the problem.

Mon Apr  7 10:39:23 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tao/DynamicAny/DynCommon.cpp (get_any):

          Removed const cast from rhs of Any extraction.

Sun Apr  6 23:34:23 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tests/OBV/Any/server.dsp:
        * tests/OBV/Factory/client.dsp:
        * tests/OBV/Factory/server.dsp:
        * tests/OBV/Forward/client.dsp:
        * tests/OBV/Forward/server.dsp:
        * tests/OBV/TC_Alignment/client.dsp:
        * tests/OBV/TC_Alignment/server.dsp:
        * tests/Param_Test/anyop.dsp:

          Turned on RTTI for some configurations of these projects.

Sun Apr  6 23:18:35 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tao/Any.h:

	  Changed declaration of exported insertion and extraction 
	  operators for Any_var to be predicated on __ACE_INLINE__
	  not being defined.

Sun Apr  6 22:40:01 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tao/RTCORBA/RTCORBAC.cpp:

	  Fixed and cut and paste error.

Sun Apr  6 21:26:24 2003  Jeff Parsons <j.parsons@vanderbilt.edu>
